# scriba-legacy

./: .gitignore  .hlint.yaml  CHANGELOG.md  LICENSE  README.md  TODO.md  scriba.cabal  stack.yaml
app/: Main.hs
doc/: manual-indent.scb  manual.css  manual.scb  manual.sml
doc/hardy/: hardy-sinx.css  hardy-sinx.html  hardy-sinx.scb
doc/manual/: manual.css  manual.html  manual.scb
doc/riemann/: README.scb  riemann.css  riemann.html  riemann.scb
src/Text/Scriba/: Counters.hs  Decorate.hs  Element.hs  Intermediate.hs  Library.hs  Markup.hs  Numbering.hs  OldDecorate.hs  Package.hs  Parse.hs  ParseIntermediate.hs  Titling.hs
src/Text/Scriba/Decorate/: Common.hs  Gathering.hs  Linking.hs  Numbering.hs  PlainText.hs  Referencing.hs  Titling.hs
src/Text/Scriba/Element/: BlockCode.hs  Cite.hs  DisplayMath.hs  Doc.hs  DocAttrs.hs  Emph.hs  Foreign.hs  Formal.hs  Identifier.hs  InlineCode.hs  InlineMath.hs  List.hs  Memoir.hs  Metadata.hs  MixedBody.hs  Name.hs  Note.hs  PageMark.hs  Paragraph.hs  Quote.hs  Ref.hs  Regularize.hs  Section.hs  Str.hs  Table.hs  Title.hs  TitleComponent.hs  TitleParts.hs  WorkTitle.hs
src/Text/Scriba/Markup/: BlockCode.hs  DisplayMath.hs  Emph.hs  Formal.hs  InlineCode.hs  InlineMath.hs  List.hs  MixedBody.hs  PageMark.hs  Paragraph.hs  Parse.hs  Quote.hs  Str.hs  Surface.hs  TitleParts.hs
src/Text/Scriba/Render/: Html.hs
src/Text/Scriba/Source/: Common.hs  Indent.hs  Lexer.hs  Parse.hs
test/: test-scriba.hs
test/tests/: bayes.internal  bayes.parse  bayes.scb  bayes.sml  block-verbatim.internal  block-verbatim.parse  block-verbatim.sml  manual-indent.html  manual.html  manual.intermediate  manual.markup  manual.parse  simple.indent  simple.indentparse  simple.intermediate  simple.markup  simple.parse  simple.scb  simple.sml
