cabal-version:       2.2

name:                scriba
version:             0.1.0
synopsis:            The scriba markup language and related publishing tools
license:             BSD-2-Clause
license-file:        LICENSE
author:              despresc
maintainer:          christian.j.j.despres@gmail.com
copyright:           2020 Christian Despres
category:            Text
build-type:          Simple
extra-source-files:  CHANGELOG.md

common base
  default-language: Haskell2010
  ghc-options: -Wall -Wextra
  build-depends: base >=4.13 && <5

library
  import: base
  hs-source-dirs: src
  build-depends: megaparsec
               , text
               , containers
               , mtl
               , blaze-html
               , blaze-markup
               , roman-numerals
               , digits
               , aeson
               , shake
  exposed-modules:
    Text.Scriba.Counters
    Text.Scriba.Decorate
    Text.Scriba.Decorate.Common
    Text.Scriba.Decorate.Gathering
    Text.Scriba.Decorate.Numbering
    Text.Scriba.Decorate.Referencing
    Text.Scriba.Decorate.Titling
    Text.Scriba.Element
    Text.Scriba.Element.BlockCode
    Text.Scriba.Element.Cite
    Text.Scriba.Element.DisplayMath
    Text.Scriba.Element.DocAttrs
    Text.Scriba.Element.Emph
    Text.Scriba.Element.Foreign
    Text.Scriba.Element.Formal
    Text.Scriba.Element.Identifier
    Text.Scriba.Element.InlineCode
    Text.Scriba.Element.InlineMath
    Text.Scriba.Element.List
    Text.Scriba.Element.Memoir
    Text.Scriba.Element.MixedBody
    Text.Scriba.Element.Name
    Text.Scriba.Element.Note
    Text.Scriba.Element.PageMark
    Text.Scriba.Element.Paragraph
    Text.Scriba.Element.Quote
    Text.Scriba.Element.Ref
    Text.Scriba.Element.Regularize
    Text.Scriba.Element.Str
    Text.Scriba.Element.Table
    Text.Scriba.Element.Title
    Text.Scriba.Element.TitleComponent
    Text.Scriba.Element.WorkTitle
    Text.Scriba.Library
    Text.Scriba.Intermediate
    Text.Scriba.Intermediate.Node
    Text.Scriba.Intermediate.Parse
    Text.Scriba.Markup
    Text.Scriba.Package
    Text.Scriba.Render.Html
    Text.Scriba.Source.Common
    Text.Scriba.Source.Parse

executable scriba-exe
  import: base
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: scriba

test-suite scriba-test
  import: base
  type: exitcode-stdio-1.0
  main-is: test/test-scriba.hs
  build-depends: tasty
               , tasty-golden
               , text
               , scriba
               , filepath
               , pretty-show
               , bytestring
               , blaze-html
               , containers
